Closed Bug 660591 Opened 14 years ago Closed 14 years ago

Bug 625600 causes bustage on Win64

Categories

(Core :: JavaScript Engine, defect)

x86_64
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla7

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

(Whiteboard: [fixed-in-tracemonkey])

Attachments

(1 file)

Bug 625600 is bad merge for Win64. Althouhg JavaScriptCore doesn't support MSVC-Win64 ABI, we support it even if JM.
Attached patch fixSplinter Review
Attachment #536011 - Flags: review?(dvander)
Attachment #536011 - Flags: review?(dvander) → review+
Whiteboard: [fixed-in-tracemonkey]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: