Bug 660591 - Bug 625600 causes bustage on Win64. r=dmandelin